Remove unused variable 'codeCol' from index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ const PALETTE = [
   const NO_DATA_FILL = "#3a4258";
 
   // --- State
- let map, layer, areasFC=null, file9=[], codeCol=null;
+ let map, layer, areasFC=null, file9=[];
 
   const weights = {...DEFAULT_WEIGHTS};
   let legendVisible = JSON.parse(localStorage.getItem('legendVisible') ?? 'true');
