--- a/index.html
+++ b/index.html
@@ -170,6 +170,16 @@ const PALETTE = [
     const i = Math.max(1, Math.min(10, dec)) - 1;
     return PALETTE[i];
   }
+// --- Robust coercions (handles commas, spaces, BOM, weird minus signs)
+const cleanStr = v => String(v ?? "")
+  .replace(/^\uFEFF/, "")         // strip BOM
+  .trim();
+
+const num = v => {
+  const s = cleanStr(v).replace(/[\s,]/g, "").replace(/[−–—]/g, "-");
+  const x = +s;
+  return Number.isFinite(x) ? x : NaN;
+};
 
   // --- UI (sliders & legend)
   const slidersDiv = document.getElementById('sliders');
@@ -220,6 +230,7 @@ const PALETTE = [
     if (!g.ok) throw new Error('Geo fetch failed: '+g.status);
     const raw = await g.json();
     areasFC = looksLike27700(raw) ? reproject27700toWGS84(raw) : raw;
+console.log("[GEO] feature props sample:", areasFC?.features?.[0]?.properties);
 
     // ---- load file9 (auto-detect delimiter CSV/TSV)
     const res = await fetch(CSV_URL, {cache:'no-store'});
@@ -230,17 +241,20 @@ const PALETTE = [
       header: true, dynamicTyping: false, skipEmptyLines: true,
       delimiter: guessTab ? '\t' : ','
     });
-    file9 = parsed.data || [];
-    if (!file9.length) throw new Error('File9 has 0 rows');
+  file9 = (parsed.data || []).map(r => ({
+  AREACD: cleanStr(r.AREACD).toUpperCase(),  // force uppercase & trim
+  income:  num(r.income),
+  employ:  num(r.employ),
+  educ:    num(r.educ),
+  health:  num(r.health),
+  crime:   num(r.crime),
+  barrier: num(r.barrier),
+  living:  num(r.living),
+}));
 
-    draw();
-    updateAll();  // <- coloring happens here
+// quick sanity log
+console.log("[FILE9] rows:", file9.length, "sample:", file9[0]);
 
-  } catch (err) {
-    console.error(err);
-    alert('Failed to load map/data. See console.');
-  }
-});
 
   function draw(){
     if(layer) { map.removeLayer(layer); layer=null; }
@@ -267,33 +281,33 @@ function updateAll() {
   const normW = normalizeWeights(DEFAULT_WEIGHTS); // or your weights logic
 
   // --- compute composite score and decile per row ---
- const scores = file9.map(r =>
-  Number(r[DK_MAP.dom_income])     * normW.dom_income +
-  Number(r[DK_MAP.dom_employment]) * normW.dom_employment +
-  Number(r[DK_MAP.dom_education])  * normW.dom_education +
-  Number(r[DK_MAP.dom_health])     * normW.dom_health +
-  Number(r[DK_MAP.dom_crime])      * normW.dom_crime +
-  Number(r[DK_MAP.dom_barriers])   * normW.dom_barriers +
-  Number(r[DK_MAP.dom_living])     * normW.dom_living
+const scores = file9.map(r =>
+  r.income  * normW.dom_income     +
+  r.employ  * normW.dom_employment +
+  r.educ    * normW.dom_education  +
+  r.health  * normW.dom_health     +
+  r.crime   * normW.dom_crime      +
+  r.barrier * normW.dom_barriers   +
+  r.living  * normW.dom_living
 );
+
 
 
   const { ranks, deciles } = rankAndDeciles(scores);
 
   // --- build index for quick lookup ---
   const idx = new Map();
-  file9.forEach((r,i)=>{
-    const raw = r.AREACD;
-    if(raw!=null) idx.set(String(raw).toUpperCase().trim(), i);
-  });
+file9.forEach((r,i) => idx.set(r.AREACD, i));
+
 
   // --- colour each polygon ---
   let matched=0,total=0;
   layer.eachLayer(l=>{
     total++;
-    const props = l.feature?.properties || {};
-    const code = String(props.AREACD ?? "").toUpperCase().trim();
-    const i = idx.get(code);
+   const props = l.feature?.properties || {};
+const code  = cleanStr(props.AREACD).toUpperCase();
+const i     = idx.get(code);
+
     const dec = (i!=null) ? deciles[i] : NaN;
 
     const fill = colorFor(dec);
@@ -309,6 +323,10 @@ function updateAll() {
 
   console.log(`[JOIN] matched ${matched} of ${total} features`);
   updateLegend();
+// how many polygons matched and how many NaNs in scores?
+const nanScores = scores.filter(x => !Number.isFinite(x)).length;
+console.log(`[JOIN] matched ${matched} of ${total} features | NaN scores: ${nanScores}/${scores.length}`);
+
 }
 
   function exportCSV(){
