--- a/index.html
+++ b/index.html
@@ -208,32 +208,144 @@ const num = v => {
     el.style.display = legendVisible ? 'block' : 'none';
     document.getElementById('legendToggle').textContent = legendVisible ? 'Hide legend' : 'Show legend';
   }
+function draw(){
+  if(layer) { map.removeLayer(layer); layer=null; }
+  layer = L.geoJSON(areasFC, {
+    style: ()=>({color:'#9fb6e6',weight:1.1,fillColor:NO_DATA_FILL,fillOpacity:0.9}),
+    onEachFeature: (f,l)=>{
+      l.on({
+        mouseover:e=>{ e.target.setStyle({weight:2,color:'#fff',fillColor:e.target._currentFill,fillOpacity:1}); },
+        mouseout:e=>{ e.target.setStyle({weight:1.1,color:'#9fb6e6',fillColor:e.target._currentFill,fillOpacity:0.9}); },
+        click:()=> map.fitBounds(l.getBounds(), {maxZoom:11})
+      });
+    }
+  }).addTo(map);
+  map.fitBounds(layer.getBounds(),{padding:[20,20]});
+}
+
+// Joins File9 to the map and colours areas
+function updateAll() {
+  const normW = normalizeWeights(DEFAULT_WEIGHTS);
+
+  const scores = file9.map(r =>
+    r.income  * normW.dom_income     +
+    r.employ  * normW.dom_employment +
+    r.educ    * normW.dom_education  +
+    r.health  * normW.dom_health     +
+    r.crime   * normW.dom_crime      +
+    r.barrier * normW.dom_barriers   +
+    r.living  * normW.dom_living
+  );
+  const { ranks, deciles } = rankAndDeciles(scores);
+
+  // index by LSOA21CD (already uppercased in normalisation step)
+  const idx = new Map();
+  file9.forEach((r,i)=> idx.set(r.LSOA21CD, i));
+
+  let matched=0,total=0;
+  layer.eachLayer(l=>{
+    total++;
+    const props = l.feature?.properties || {};
+    const code  = String(props[GEO_CODE_KEY] ?? "").trim().toUpperCase(); // LSOA21CD from GeoJSON
+    const i     = idx.get(code);
+    const dec   = (i!=null) ? deciles[i] : NaN;
+
+    const fill = colorFor(dec);
+    l._currentFill = fill;
+    l.setStyle({ fillColor: fill });
+
+    const name = props[GEO_NAME_KEY] || code || "Area";
+    const content = `<div><strong>${name}</strong><br/><span style="opacity:.75">${code}</span><br/>Decile: <strong>${Number.isFinite(dec)?dec:'—'}</strong></div>`;
+    l.bindTooltip(content, { sticky:true, opacity:0.95, className:'tooltip' });
+
+    if(Number.isFinite(dec)) matched++;
+  });
+
+  const nanScores = scores.filter(x => !Number.isFinite(x)).length;
+  console.log(`[JOIN] matched ${matched} of ${total} features | NaN scores: ${nanScores}/${scores.length}`);
+  updateLegend();
+}
+
+function exportCSV(){
+  if(!file9?.length) return;
+  const normW = normalizeWeights(DEFAULT_WEIGHTS);
+  const scores = file9.map(r=>weightedScore(r,normW,DK_MAP));
+  const {ranks,deciles} = rankAndDeciles(scores);
+
+  // index by LSOA21CD (use cleaned field)
+  const idx=new Map(); file9.forEach((r,i)=> idx.set(r.LSOA21CD,i));
+
+  const rows=[];
+  for(const [code,i] of idx.entries()){
+    rows.push({LSOA21CD:code,score:scores[i],rank:ranks[i],decile:deciles[i]});
+  }
+  const cols=['LSOA21CD','score','rank','decile'];
+  const esc=s=>`"${String(s).replaceAll('"','""')}"`;
+  const csv=[cols.map(esc).join(','), ...rows.map(r=>cols.map(c=>esc(r[c])).join(','))].join('\n');
+
+  const blob = new Blob([csv],{type:'text/csv;charset=utf-8;'});
+  const url=URL.createObjectURL(blob);
+  const a=document.createElement('a'); a.href=url; a.download=`imd_bespoke_${new Date().toISOString().slice(0,10)}.csv`; a.click();
+  URL.revokeObjectURL(url);
+}
+
+function exportGeo(){
+  if(!areasFC||!file9?.length) return;
+  const normW = normalizeWeights(DEFAULT_WEIGHTS);
+  const scores = file9.map(r=>weightedScore(r,normW,DK_MAP));
+  const {ranks,deciles} = rankAndDeciles(scores);
+
+  const idx=new Map(); file9.forEach((r,i)=> idx.set(r.LSOA21CD,i));
+
+  const out = {
+    type:'FeatureCollection',
+    features: areasFC.features.map(ft=>{
+      const code = String(ft.properties?.LSOA21CD ?? ft.id ?? '').trim().toUpperCase();
+      const i = idx.get(code);
+      return {
+        ...ft,
+        properties:{
+          ...ft.properties,
+          _score:  (i!=null? scores[i]   : null),
+          _rank:   (i!=null? ranks[i]    : null),
+          _decile: (i!=null? deciles[i]  : null)
+        }
+      };
+    })
+  };
+
+  const blob = new Blob([JSON.stringify(out)],{type:'application/geo+json'});
+  const url=URL.createObjectURL(blob); const a=document.createElement('a');
+  a.href=url; a.download=`imd_bespoke_${new Date().toISOString().slice(0,10)}.geojson`; a.click();
+  URL.revokeObjectURL(url);
+}
 
   // --- Map bootstrap
-  window.addEventListener('DOMContentLoaded', async ()=>{
-    map = L.map('map',{preferCanvas:true,zoomSnap:0.25,zoomDelta:0.5}).setView([53.9,-2.5],6);
-    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
-                {attribution:'&copy; OpenStreetMap, &copy; CARTO'}).addTo(map);
+ window.addEventListener('DOMContentLoaded', async ()=>{
+  map = L.map('map',{preferCanvas:true,zoomSnap:0.25,zoomDelta:0.5}).setView([53.9,-2.5],6);
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
+              {attribution:'&copy; OpenStreetMap, &copy; CARTO'}).addTo(map);
 
-    document.getElementById('fitBtn').addEventListener('click', ()=>{ if(layer) map.fitBounds(layer.getBounds(),{padding:[20,20]}); });
-    document.getElementById('legendToggle').addEventListener('click', ()=>{
-      legendVisible = !legendVisible; updateLegend(); localStorage.setItem('legendVisible', JSON.stringify(legendVisible));
-    });
-    document.getElementById('reset').addEventListener('click', ()=>{ Object.assign(weights, DEFAULT_WEIGHTS); renderSliders(); updateAll(); });
-    document.getElementById('exportCsv').addEventListener('click', exportCSV);
-    document.getElementById('exportGeo').addEventListener('click', exportGeo);
+  document.getElementById('fitBtn').addEventListener('click', ()=>{ if(layer) map.fitBounds(layer.getBounds(),{padding:[20,20]}); });
+  document.getElementById('legendToggle').addEventListener('click', ()=>{
+    legendVisible = !legendVisible; updateLegend(); localStorage.setItem('legendVisible', JSON.stringify(legendVisible));
+  });
+  document.getElementById('reset').addEventListener('click', ()=>{ Object.assign(weights, DEFAULT_WEIGHTS); renderSliders(); updateAll(); });
+  document.getElementById('exportCsv').addEventListener('click', exportCSV);
+  document.getElementById('exportGeo').addEventListener('click', exportGeo);
 
-    renderSliders(); updateLegend();
+  renderSliders();
+  updateLegend();
 
-     try {
+  try {
     // ---- load geojson
     const g = await fetch(GEO_URL, {cache:'no-store'});
     if (!g.ok) throw new Error('Geo fetch failed: '+g.status);
     const raw = await g.json();
     areasFC = looksLike27700(raw) ? reproject27700toWGS84(raw) : raw;
-console.log("[GEO] feature props sample:", areasFC?.features?.[0]?.properties);
+    console.log("[GEO] feature props sample:", areasFC?.features?.[0]?.properties);
 
-    // ---- load file9 (auto-detect delimiter CSV/TSV)
+    // ---- load file9 (auto-detect delimiter CSV/TSV) & normalise
     const res = await fetch(CSV_URL, {cache:'no-store'});
     if (!res.ok) throw new Error('CSV fetch failed: '+res.status);
     const txt = await res.text();
@@ -242,21 +354,32 @@ console.log("[GEO] feature props sample:", areasFC?.features?.[0]?.properties);
       header: true, dynamicTyping: false, skipEmptyLines: true,
       delimiter: guessTab ? '\t' : ','
     });
-  file9 = (parsed.data || []).map(r => ({
-  LSOA21CD: String(r[CODE_COL] ?? "").trim().toUpperCase(),
-  income:  num(r.income),
-  employ:  num(r.employ),
-  educ:    num(r.educ),
-  health:  num(r.health),
-  crime:   num(r.crime),
-  barrier: num(r.barrier),
-  living:  num(r.living),
-}));
 
+    file9 = (parsed.data || []).map(r => ({
+      LSOA21CD: String(r[CODE_COL] ?? "").trim().toUpperCase(),
+      income:  num(r.income),
+      employ:  num(r.employ),
+      educ:    num(r.educ),
+      health:  num(r.health),
+      crime:   num(r.crime),
+      barrier: num(r.barrier),
+      living:  num(r.living),
+    }));
+    console.log("[FILE9] rows:", file9.length, "sample:", file9[0]);
 
-// quick sanity log
-console.log("[FILE9] rows:", file9.length, "sample:", file9[0]);
+    // Expose for quick console checks (optional)
+    window.__areas = areasFC;
+    window.__file9 = file9;
 
+    // draw & colour
+    draw();
+    updateAll();
+
+  } catch (err) {
+    console.error(err);
+    alert('Failed to load map/data. See console.');
+  }
+});
 
   function draw(){
     if(layer) { map.removeLayer(layer); layer=null; }
